--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,107 @@
-body {
-    background-color: rgb(252, 170, 161);
+html{
+
+margin: 0px;
+min-height: 100%;
+
+
+
+
 }
-.icon{
-    content: url('./images/keyicon.png');
-    height:30px;
-    width: 30px;
-    display: block;
+
+
+body {
+    
+    background-image: linear-gradient(#654EA3,#EAAFC8);
+    color: #171C3E;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+    margin: 0 0;
+    /* margin-top: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px; */
+    background-repeat: no-repeat;
+    min-height: 100%;
+    
+}
+main {
+    background-image: linear-gradient(#EEF2F3,#8E9EAB);
+    text-align: justify;
+    width: 65%;
+    margin: auto;
+    padding: 2em;
+    height: 100vh;
+    
+    
+}
+
+h1 {
+    color: #171C3E;
+}
+
+#instructionStyle {
+    border: solid #525252;
+    height: 30%;
+    padding: 10 10;
+    padding-left: 2em;
+    padding-right: 2em;
+    width: 60%;
+    margin: auto;
+}
+
+.icon {
+    background-image: url('./images/keyicon.png');
+    padding: 10px 20px;
+    background-position: center center;
+    /* center center = Centro no eixo x e no eixo y */
+    vertical-align: middle;
+    border-radius: 4px;
+}
+
+#quantity {
+    width: 15%;
+    padding: 11px;
+    vertical-align: middle;
+    text-align: center;
+}
+
+#boxes {
+    padding-top: 1em;
+    display: table;
+    clear: both;
+    margin: auto;
+}
+
+#boxInput {
+    width: 45%;
+    float: left;
+    margin-bottom: 15px;
+}
+
+#boxOutput {
+    width: 45%;
+    float: right;
+}
+
+button {
+    background-color:#3D72B4;
+    color:#FFE8E4;
+    padding: 12px 24px;
+    text-align: center;
+    display: inline-block;
+    font-size: 12px;
+    margin: 3px;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.boxStyle {
+    border: 1px solid #595D75;
+    background:rgb(202, 215, 226);
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    box-shadow: 1px 1px 2px #333333;
+    -moz-box-shadow: 1px 1px 2px #333333;
+    -webkit-box-shadow: 1px 1px 2px #333333;
 }
