--- a/src/style.css
+++ b/src/style.css
@@ -20,10 +20,10 @@ body {
 main {
     background-image: linear-gradient(#EEF2F3, #8E9EAB);
     text-align: justify;
-    width: 65%;
-    margin: auto;
-    padding: 2em;
-    height: 100vh;
+    width:65%;
+    margin:auto;
+    padding:2em;
+    height:100vw;
 }
 
 h1 {
@@ -32,12 +32,13 @@ h1 {
 
 #instructionStyle {
     border: solid #525252;
-    height: 30%;
+    height: 15%;
     margin: auto;
     padding: 10 10;
     padding-left: 2em;
     padding-right: 2em;
     width: 60%;
+    font-size: 1.2em;
     
 }
 
@@ -109,6 +110,9 @@ button {
     color: #171C3E;
     font-size: 10em;
     text-align: center;
+    margin-top:250px;
+    height: 100%;
+    display: none;
 }
 
 
