--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,7 @@ h1 {
 
 #instructionStyle {
     border: solid #525252;
-    height: 15%;
+    height: 18em;
     margin: auto;
     padding: 10 10;
     padding-left: 2em;
