--- a/src/style.css
+++ b/src/style.css
@@ -94,7 +94,7 @@
     -webkit-box-shadow: 1px 1px 2px #333333;
 }
 
-#tex-by {
+.tex-by {
     color: #171C3E;
     font-size: 10em;
     text-align: center;
