--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,9 @@
-.html-style {
+/* .html-style {
     margin: 0px;
     min-height: 100%;
-}
+} */
 
-.body-style {
+/* .body-style {
     background-image: linear-gradient(#654EA3, #EAAFC8);
     background-repeat: no-repeat;
     color: #171C3E;
@@ -12,18 +12,57 @@
     margin: 0 0;
     text-align: center;
     min-height: 100%;
-}
+} */
 
 .main-style {
+    align-items: center;
     background-image: linear-gradient(#EEF2F3, #8E9EAB);
-    height: 50vw;
-    margin: auto;
-    padding: 2em;
-    text-align: justify;
-    width: 65%;
+    display: flex;
+    /* flex: 1; */
+    flex-direction: column;
+    flex-wrap: wrap;
+    text-align: center;
+   
 }
 
-.instruction-style {
+
+.container-introduction{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+
+}
+
+/* instruction container */
+/* .instruction-style{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+} */
+
+.container-boxes{
+    display: flex;
+    flex: 1;
+  
+
+}
+
+.boxes{
+    align-items: center;
+    display: flex;
+    flex: 1;
+  
+
+}
+
+.box-input
+.box-output{
+    display: flex;
+    flex: 1;
+    flex-wrap: nowraps;
+    flex-direction: row;
+}
+/* .instruction-style {
     border: solid #525252;
     font-size: 1.2em;
     height: 18em;
@@ -32,40 +71,40 @@
     padding-left: 2em;
     padding-right: 2em;
     width: 50%;
-}
+} */
 
-.icon {
+/* .icon {
     background-image: url('./images/keyicon.png');
     background-position: center center;
     border-radius: 4px;
     padding: 10px 20px;
     vertical-align: middle;
-}
-
+} */
+/* 
 #input-number {
-    padding: 11px;
+    /* padding: 11px; */
     text-align: center;
     vertical-align: middle;
-    width: 50px;
-}
+    /* width: 50px; */
+} */
 
-.boxes {
-    clear: both;
+/* .boxes {
+    /* clear: both;
     display: table;
     margin: auto;
     padding-top: 1em;
-    width: 90%;
-}
+    width: 90%; */
+} */
 
-.box-input {
+/* .box-input {
     display: block;
     float: left;
     margin: auto;
     margin-bottom: 15px;
     width: 45%;
-}
+} */
 
-.box-output {
+/* .box-output {
     display: none;
     float: right;
     width: 45%;
@@ -101,4 +140,4 @@
     margin-top: 250px;
     height: 100%;
     display: none;
-}
+} */
