--- a/src/style.css
+++ b/src/style.css
@@ -1,143 +1,76 @@
-/* .html-style {
-    margin: 0px;
-    min-height: 100%;
-} */
-
-/* .body-style {
-    background-image: linear-gradient(#654EA3, #EAAFC8);
-    background-repeat: no-repeat;
-    color: #171C3E;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: medium;
-    margin: 0 0;
-    text-align: center;
-    min-height: 100%;
-} */
-
-.main-style {
-    align-items: center;
-    background-image: linear-gradient(#EEF2F3, #8E9EAB);
+.main-container{
     display: flex;
-    /* flex: 1; */
     flex-direction: column;
-    flex-wrap: wrap;
+    justify-content: center;
     text-align: center;
-   
 }
-
-
-.container-introduction{
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+.container-textos{
+    flex:1;
 
 }
+.introducao{
+    flex:1;
 
-/* instruction container */
-/* .instruction-style{
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-} */
+}
+.instrucoes{
+    border: solid black;
+    border-radius: 2em;
+    flex:1;
+    padding: 4em;
 
+}
 .container-boxes{
-    display: flex;
-    flex: 1;
-  
+    flex:1;
+    flex-direction: column;
+}
+.box-input{
 
 }
-
-.boxes{
-    align-items: center;
-    display: flex;
-    flex: 1;
-  
-
-}
-
-.box-input
 .box-output{
-    display: flex;
-    flex: 1;
-    flex-wrap: nowraps;
-    flex-direction: row;
-}
-/* .instruction-style {
-    border: solid #525252;
-    font-size: 1.2em;
-    height: 18em;
-    margin: auto;
-    padding: 10 10;
-    padding-left: 2em;
-    padding-right: 2em;
-    width: 50%;
-} */
 
-/* .icon {
-    background-image: url('./images/keyicon.png');
-    background-position: center center;
-    border-radius: 4px;
-    padding: 10px 20px;
-    vertical-align: middle;
-} */
-/* 
-#input-number {
-    /* padding: 11px; */
-    text-align: center;
-    vertical-align: middle;
-    /* width: 50px; */
-} */
-
-/* .boxes {
-    /* clear: both;
-    display: table;
-    margin: auto;
-    padding-top: 1em;
-    width: 90%; */
-} */
-
-/* .box-input {
-    display: block;
-    float: left;
-    margin: auto;
-    margin-bottom: 15px;
-    width: 45%;
-} */
-
-/* .box-output {
-    display: none;
-    float: right;
-    width: 45%;
 }
 
-.button-style {
-    background-color: #3D72B4;
-    border-radius: 5px;
-    color: #FFE8E4;
-    display: inline-block;
-    font-size: 12px;
-    font-weight: bold;
-    margin: 0 0;
-    padding: 12px 24px;
-    text-align: center;
-}
+@media only screen and (max-width:359px) {
+    .main-container{
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        
+    }
+    .container-textos{
+        margin-bottom: 3em;
+        flex:1;
+      
+    
+    }
+    /* .introducao{
+        font-size: 1em;
+        font-weight: bold;
+        flex:1;
+    
+    } */
+    .instrucoes{
+        width: 50%;
+       flex:1;
+       padding: 0.5em;
+       font-size: 0.9em;
+       font-weight: bold;
+    
+    }
+    .container-boxes{
+        align-items: center;
+        justify-content: center;
+        flex:3;
+        flex-direction: column;
+    }
+    .box-input{
+    
+    }
+    .box-output{
+    
+    }
+    
 
-.box-style {
-    background: rgb(202, 215, 226);
-    border: 1px solid #595D75;
-    border-radius: 4px;
-    box-shadow: 1px 1px 2px #333333;
-    -moz-border-radius: 4px;
-    -moz-box-shadow: 1px 1px 2px #333333;
-    -webkit-border-radius: 4px;
-    -webkit-box-shadow: 1px 1px 2px #333333;
 }
-
-.tex-by {
-    color: #171C3E;
-    font-size: 10em;
-    text-align: center;
-    margin-top: 250px;
-    height: 100%;
-    display: none;
-} */
