--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 .main-container{
+    padding: 2em;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -9,28 +10,59 @@
 
 }
 .introducao{
-    flex:1;
+    padding: 0.5em;
+    font-weight: bold;
+    font-size: 0.8em;
 
 }
 .instrucoes{
     border: solid black;
     border-radius: 2em;
-    flex:1;
-    padding: 4em;
+    padding: 0.5em;
+    font-weight: bold;
+    font-size: 0.8em;
+    /* flex:1;
+    padding: 4em; */
 
 }
 .container-boxes{
-    flex:1;
+    background-color: blue;
+display: flex; 
+    margin-top: 3em;
+    margin-bottom: 3em;
+    padding: 3em;
+    flex:2;
+   /* justify-content: space-around; */
+   flex-direction: column;
+   border: solid black 5px;
+   align-items: center;
+    justify-content: center;
+   
+}
+
+.box-input,
+.box-output,
+.spans-place-holder{
+    color: black;
+    font-weight: bold;
+    width: 60%;
+    display: flex;
+    
     flex-direction: column;
-}
-.box-input{
+    flex:1;
+   
 
+   
 }
-.box-output{
-
+.spans-place-holder{
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-@media only screen and (max-width:359px) {
+
+@media only  screen and (min-width:360px) and (max-width:560px){
     .main-container{
         align-items: center;
         display: flex;
@@ -60,17 +92,17 @@
     
     }
     .container-boxes{
+        display: flex;
+        
         align-items: center;
-        justify-content: center;
+        justify-content:space-around;
         flex:3;
         flex-direction: column;
     }
-    .box-input{
-    
-    }
+    .box-input
     .box-output{
+        border: solid crimson 5px
     
     }
-    
 
 }
